# potential-guacamole

./: Dockerfile  LICENSE  README.md  auth-service.yaml  commands.txt  gunicorn.conf.py  pyproject.toml
app/: config.py  database.py  kafka_handlers.py  main.py  repository.py  schema.sql  schemas.py
